# QScape

cmake/: FindSphinx.cmake
doc/: conf.py  index.rst
src/: CMakeLists.txt  camerawidget.cpp  camerawidget.h  main.cpp  mainwindow.cpp  mainwindow.h  viewerwidget.cpp  viewerwidget.h
src/ui/: camerawidget.ui  mainwindow.ui
